--- a/app/views/apps/_configuration_instructions.html.erb
+++ b/app/views/apps/_configuration_instructions.html.erb
@@ -2,7 +2,7 @@
 # gem "airbrake", "~> 13.0"
 
 # Invoke the following command from your terminal:
-# rails g airbrake
+# rails generate airbrake
 #
 # Then modify the following the generated file
 # config/initializers/errbit.rb with the following flags:
